top boxes fixes, darken on mobile, mobile spacing

--- a/app/assets/sass/v11/new/_boxes.scss
+++ b/app/assets/sass/v11/new/_boxes.scss
@@ -446,26 +446,26 @@
 
 .tl-landing-arrow {
     min-height: 50px;
-    min-width: 55px;
+    min-width: 60px;
     max-height: 30px;
     width: auto;
-    margin-right: 10px;
+    margin-right: 15px;
     position: relative;
     top: 4px;
 }
 
 
 .tl-landing-grid-left {
-    padding: 0 2vw 0 3.5vw;
+    padding: 0 2.5vw 0 1.5vw;
 
 }
 
 .tl-landing-grid-right {
-    padding: 0 3.5vw 0 2vw;
+    padding: 0 1.5vw 0 2.5vw;
 
 }
 
 .tl-landing-grid-mid {
-    padding: 0 2vw 0 2vw;
+    padding: 0 2.5vw 0 2vw;
 
 }
